--- a/src/assets/data/ProjectData/ProjectData.json
+++ b/src/assets/data/ProjectData/ProjectData.json
@@ -8,6 +8,272 @@
 
     {
         "id": 1,
+        "category": "projReactJs",
+        "name": "Resume Online",
+        "shortDesc": "React JS Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://xbphamvn.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_resume.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/resume/resume_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_04.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_05.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_06.png",
+                "status": ""
+            }
+        ]
+    },
+
+
+
+
+
+
+
+
+
+
+
+    {
+        "id": 1,
+        "category": "projJavascript",
+        "name": "Virtual Glasses",
+        "shortDesc": "Javascript ES6 Project",
+        "type": "es6/javascript",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://virtualglasses.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/js_virtualGlasses",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/js/virtual_glasses/virtual_glasses_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/js/virtual_glasses/virtual_glasses_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/js/virtual_glasses/virtual_glasses_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/js/virtual_glasses/virtual_glasses_04.png",
+                "status": ""
+            }
+        ]
+    },
+    {
+        "id": 1,
+        "category": "projJavascript",
+        "name": "Todo List",
+        "shortDesc": "Javascript ES6 Project",
+        "type": "javascript",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://todolistes6.netlify.app/",
+            "linkGithub": "https://github.com/xbphamvn/js_todolist.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/js/todolist/todolist_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/js/todolist/todolist_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/js/todolist/todolist_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/js/todolist/todolist_04.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/js/todolist/todolist_05.png",
+                "status": ""
+            }
+        ]
+    },
+    {
+        "id": 1,
         "category": "projJavascript",
         "name": "Calculate Uber Fee",
         "shortDesc": "Javascript Foundation Project!",
