--- a/src/assets/data/ProjectData/ProjectData.json
+++ b/src/assets/data/ProjectData/ProjectData.json
@@ -5,7 +5,314 @@
 
 
 
-
+    {
+        "id": 1,
+        "category": "projReactJs",
+        "name": "Dressing Room React Version",
+        "shortDesc": "React JS Foundation Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://dressingroomreactjs.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_dressingRoom.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/dressing_room/dressing_room_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/dressing_room/dressing_room_02.png",
+                "status": ""
+            }
+        ]
+    },
+    {
+        "id": 1,
+        "category": "projReactJs",
+        "name": "User Management",
+        "shortDesc": "React JS Foundation Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://usercontrol.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_userManager.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/user_manager/user_manager_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/user_manager/user_manager_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/user_manager/user_manager_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/user_manager/user_manager_04.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/user_manager/user_manager_05.png",
+                "status": ""
+            }
+        ]
+    },
+    {
+        "id": 1,
+        "category": "projReactJs",
+        "name": "Hamberger Order",
+        "shortDesc": "React JS Foundation Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://reactjsburgerorder.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_burgerOrder.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/burger_order/burger_order_02.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/burger_order/burger_order_01.png",
+                "status": ""
+            }
+        ]
+    },
+    {
+        "id": 1,
+        "category": "projReactJs",
+        "name": "Hand Calculator Online",
+        "shortDesc": "React JS Foundation Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://calculatorxbpham.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_calculator.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Lorem ipsum dolor sit amet consectetur adipisicing elit. Est sed unde delectus rerum aut nulla? Est sed unde delectus rerum aut nulla?"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                },
+                {
+                    "icon": "fab fa-js",
+                    "desc": "Javascript",
+                    "class": "overlayDetail__js"
+                },
+                {
+                    "icon": "",
+                    "desc": "JQuery",
+                    "class": "overlayDetail__jquery"
+                },
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fad fa-palette",
+                    "desc": "Ant Design",
+                    "class": "overlayDetail__antd"
+                },
+                {
+                    "icon": "fal fa-database",
+                    "desc": "Ajax (RESTful API)",
+                    "class": "overlayDetail__restapi"
+                },
+                {
+                    "icon": "fab fa-sass",
+                    "desc": "SASS",
+                    "class": "overlayDetail__sass"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/calculator/calculator_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/calculator/calculator_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/calculator/calculator_03.png",
+                "status": ""
+            }
+        ]
+    },
     {
         "id": 1,
         "category": "projReactJs",
