--- a/src/assets/data/ProjectData/ProjectData.json
+++ b/src/assets/data/ProjectData/ProjectData.json
@@ -168,7 +168,71 @@
     },
 
 
-    
+    {
+        "id": 5,
+        "category": "projReactJs",
+        "name": "Todo list React Js",
+        "shortDesc": "React JS API Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://todolistapireactjs.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_todoListAPI.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "React function component",
+                "Use redux-saga, Axios to communicate with backend",
+                "React Hooks: useState, useDispatch, useSelector",
+                "Libraries: Axios, react redux, Bootstrap"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "",
+                    "desc": "react-redux",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "",
+                    "desc": "react-spring",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/todo_list/todo_list_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/todo_list/todo_list_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/todo_list/todo_list_03.png",
+                "status": ""
+            }
+        ]
+    },
     {
         "id": 5,
         "category": "projReactJs",
