--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "web-vitals": "^0.2.4"
