--- a/src/assets/data/ProjectData/ProjectData.json
+++ b/src/assets/data/ProjectData/ProjectData.json
@@ -168,6 +168,92 @@
     },
 
 
+    
+    {
+        "id": 7,
+        "category": "projReactJs",
+        "name": "Resume Online",
+        "shortDesc": "React JS Project",
+        "type": "reactjs",
+        "classIcon": "fad fa-photo-video",
+        "detail": {
+            "linkDemo": "https://xbphamvn.netlify.app",
+            "linkGithub": "https://github.com/xbphamvn/reactjs_resume.git",
+            "date": "25 Oct, 2020",
+            "desc": [
+                "Use react higher-order components (Route and the render attribute of Route) to create Global template. Base on that can easy to create a lot of different templates when render a page component",
+                "Use JSON files (array and object) to optimize code lines when render component",
+                "Use redux-saga to handle state, onClick, onChange. And to optimize code lines when render popup to show the detail of a project",
+                "Use react-spring to make animations for components",
+                "React function component, React Hooks",
+                "Libraries: react redux saga, react-spring, react router DOM, Bootstrap 5.0",
+                "Multi responsive for desktop, tablet, mobile"
+            ],
+            "technology": [
+                {
+                    "icon": "fab fa-react",
+                    "desc": "React JS",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "",
+                    "desc": "react-spring",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "",
+                    "desc": "higher-order components",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "",
+                    "desc": "redux saga",
+                    "class": "overlayDetail__reactjs"
+                },
+                {
+                    "icon": "fab fa-bootstrap",
+                    "desc": "Bootstrap",
+                    "class": "overlayDetail__bootstrap"
+                },
+                {
+                    "icon": "fab fa-html5",
+                    "desc": "HTML",
+                    "class": "overlayDetail__html"
+                },
+                {
+                    "icon": "fab fa-css3",
+                    "desc": "CSS",
+                    "class": "overlayDetail__css"
+                }
+            ]
+        },
+        "gallery": [
+            {
+                "imgSrc": "/reactjs/resume/resume_01.png",
+                "status": "active"
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_02.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_03.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_04.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_05.png",
+                "status": ""
+            },
+            {
+                "imgSrc": "/reactjs/resume/resume_06.png",
+                "status": ""
+            }
+        ]
+    },
     {
         "id": 5,
         "category": "projReactJs",
@@ -369,90 +455,6 @@
             },
             {
                 "imgSrc": "/reactjs/user_manager/user_manager_05.png",
-                "status": ""
-            }
-        ]
-    },
-    {
-        "id": 7,
-        "category": "projReactJs",
-        "name": "Resume Online",
-        "shortDesc": "React JS Project",
-        "type": "reactjs",
-        "classIcon": "fad fa-photo-video",
-        "detail": {
-            "linkDemo": "https://xbphamvn.netlify.app",
-            "linkGithub": "https://github.com/xbphamvn/reactjs_resume.git",
-            "date": "25 Oct, 2020",
-            "desc": [
-                "React function component, React Hooks",
-                "Use react higher-order components to optimize code",
-                "Animations by react-spring",
-                "Use JSON data to optimize code lines",
-                "Multi responsive for desktop, tablet, mobile",
-                "Libraries: react redux saga, react-spring, react router DOM, Bootstrap 5.0"
-            ],
-            "technology": [
-                {
-                    "icon": "fab fa-react",
-                    "desc": "React JS",
-                    "class": "overlayDetail__reactjs"
-                },
-                {
-                    "icon": "",
-                    "desc": "react-spring",
-                    "class": "overlayDetail__reactjs"
-                },
-                {
-                    "icon": "",
-                    "desc": "higher-order components",
-                    "class": "overlayDetail__reactjs"
-                },
-                {
-                    "icon": "",
-                    "desc": "redux saga",
-                    "class": "overlayDetail__reactjs"
-                },
-                {
-                    "icon": "fab fa-bootstrap",
-                    "desc": "Bootstrap",
-                    "class": "overlayDetail__bootstrap"
-                },
-                {
-                    "icon": "fab fa-html5",
-                    "desc": "HTML",
-                    "class": "overlayDetail__html"
-                },
-                {
-                    "icon": "fab fa-css3",
-                    "desc": "CSS",
-                    "class": "overlayDetail__css"
-                }
-            ]
-        },
-        "gallery": [
-            {
-                "imgSrc": "/reactjs/resume/resume_01.png",
-                "status": "active"
-            },
-            {
-                "imgSrc": "/reactjs/resume/resume_02.png",
-                "status": ""
-            },
-            {
-                "imgSrc": "/reactjs/resume/resume_03.png",
-                "status": ""
-            },
-            {
-                "imgSrc": "/reactjs/resume/resume_04.png",
-                "status": ""
-            },
-            {
-                "imgSrc": "/reactjs/resume/resume_05.png",
-                "status": ""
-            },
-            {
-                "imgSrc": "/reactjs/resume/resume_06.png",
                 "status": ""
             }
         ]
